...
                                                        <color key="backgroundColor" red="0.14117647058823529" green="0.24313725490196078" blue="0.5607843137254902" alpha="0.84705882352941175" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="40" id="Bsr-Ep-bi6"/>
                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="INV-dQ-3kP"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                        <state key="normal" title="Register">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                <real key="value" value="15"/>
                                                            </userDefinedRuntimeAttribute>
...
